--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": ["MIT"],
     "require": {
         "php": "^7.2",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "^7.3"
     },
     "autoload": {
         "psr-4": {
